--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,22 @@
+/* FONTS */
+
 @import url(../css/stardom.css);
+@import url(../css/satoshi.css);
+
+/* VARIABLES */
 
 :root {
   --c-dark: #212529;
-  --c-brand: #4e57d4;
-  --c-brand-light: #6970dd;
+  --c-brand: #5e9463;
+  --c-brand-light: #8bd893;
   --c-brand-rgb: 78, 87, 212;
   --c-body: #727272;
-  --font-base: "stardom", sans-serif;
+  --font-base: "Satoshi-Regular", sans-serif;
   --box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.08);
   --transition: all 0.5s ease;
 }
+
+/* RESET & HELPERS */
 
 body {
   font-family: var(--font-base);
@@ -49,4 +56,47 @@ img {
 .section-padding {
   padding-top: 140px;
   padding-bottom: 140px;
+}
+
+/* NAVBAR */
+
+.navbar {
+  box-shadow: var(--box-shadow);
+}
+
+.navbar-nav .nav-link {
+  font-weight: 500;
+  color: var(--c-dark);
+}
+
+.navbar-nav .nav-link.active {
+  color: var(--c-brand);
+}
+
+/* BTN */
+
+.btn {
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 10px 24px;
+}
+
+.btn-brand {
+  background-color: var(--c-brand);
+  color: white;
+}
+
+.btn-brand:hover {
+  background-color: var(--c-brand-light);
+  border-color: var(--c-brand-light);
+  color: white;
+}
+
+/* HERO */
+
+#hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.438)),
+    url(../images/hero-bg.jpg);
 }
