--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
   --c-lalala: rgb(21, 41, 23);
   --c-dark: #115636;
   --c-brand: #5e9463;
+  --c-brand-rgb2: 94, 148, 99;
   --c-brand-light: #8bd893;
   --c-brand-rgb: 21, 41, 23;
   --c-body: #727272;
@@ -123,7 +124,7 @@ h2 {
 
 .section-title {
   color: var(--c-dark);
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 .section-title .line {
@@ -138,4 +139,25 @@ h2 {
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 20px;
+}
+
+/* ICON BOX */
+
+.iconbox {
+  width: 70px;
+  height: 70px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(var(--c-brand-rgb2), 0.1);
+  color: var(--c-brand);
+  font-size: 34px;
+  flex: none;
+}
+.abouth1 {
+  color: #115636;
+}
+.abouth5 {
+  color: #115636;
 }
