--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ img {
   padding-bottom: 140px;
 }
 
+.theme-shadow {
+  box-shadow: var(--box-shadow);
+}
+
 /* NAVBAR */
 
 .navbar {
@@ -160,4 +164,29 @@ h2 {
 }
 .abouth5 {
   color: #115636;
+}
+
+/* OFFERINGS */
+
+.offerings {
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.offerings::after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  background-color: var(--c-brand-rgb2);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transition: var(--transition);
+}
+
+.offerings:hover::after {
+  width: 100%;
+  height: 100%;
+  background: var(--c-brand);
 }
