--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,4 +189,22 @@ h2 {
   width: 100%;
   height: 100%;
   background: var(--c-brand);
+  z-index: -1;
+}
+
+.offerings h5 {
+  color: var(--c-dark);
+  font-size: 30px;
+}
+.offerings p {
+  font-size: 18px;
+}
+.offerings:hover h5,
+.offerings p {
+  color: white;
+}
+
+.offerings:hover .iconbox {
+  background-color: rgba(255, 255, 255, 0.12);
+  color: white;
 }
