--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,25 @@ img {
   box-shadow: var(--box-shadow);
 }
 
+/* IMAGE ZOOM  */
+
+.image-zoom {
+  position: relative;
+  overflow: hidden;
+}
+
+.image-zoom-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+.image-zoom-wrapper img {
+  transition: var(--transition);
+}
+
+.image-zoom:hover .image-zoom-wrapper img {
+  transform: scale(1.1);
+}
+
 /* NAVBAR */
 
 .navbar {
