--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,3 +263,22 @@ h2 {
   opacity: 1;
   top: 50%;
 }
+
+/* REVIEWS */
+.review small {
+  font-weight: 600;
+  color: var(--c-brand);
+}
+.review-head {
+  position: relative;
+}
+
+.review-head::after {
+  content: "";
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  bottom: -14px;
+  background-color: white;
+  transform: rotate(45deg);
+}
