--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,20 @@ h2 {
 .speaker-content {
   background-color: var(--c-brand);
   position: absolute;
-  bottom: 24px;
+  bottom: -24px;
   left: 50%;
   width: calc(100% - 50px);
+  transform: translate(-50%);
+  padding: 24px;
+  transition: var(--transition);
+  opacity: 0;
+}
+
+.speaker img {
+  opacity: 0.7;
+}
+
+.speaker:hover .speaker-content {
+  opacity: 1;
+  bottom: 24px;
 }
