--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,12 @@ h2 {
   background-color: var(--c-brand);
   margin: 16px auto 24px auto;
 }
+.line {
+  width: 60px;
+  height: 4px;
+  background-color: var(--c-brand);
+  margin: 16px auto 24px auto;
+}
 
 .section-title p {
   color: var(--c-body);
