--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,12 +157,6 @@ h2 {
   background-color: var(--c-brand);
   margin: 16px auto 24px auto;
 }
-.line {
-  width: 60px;
-  height: 4px;
-  background-color: var(--c-brand);
-  margin: 16px auto 24px auto;
-}
 
 .section-title p {
   color: var(--c-body);
@@ -345,4 +339,62 @@ h2 {
   border-color: var(--c-brand);
 }
 
-/* BLOG */
+/* FOOTER */
+
+footer {
+  padding-top: 120px;
+}
+
+.footer-top {
+  padding-bottom: 40px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer-bottom {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+footer li,
+footer p,
+footer a {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer .line {
+  width: 40px;
+  height: 4px;
+  background-color: var(--c-brand);
+  margin-top: 12px;
+  margin-bottom: 24px;
+  margin-top: 20px;
+}
+footer img {
+  width: 70%;
+}
+
+.social-icons a {
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 100px;
+}
+
+.social-icons a:hover {
+  background-color: var(--c-brand);
+  color: white;
+}
+
+.footer-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
