--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,3 +430,36 @@ footer img {
   flex-direction: column;
   align-items: center;
 }
+
+/* attorneys */
+#lawyers {
+  background-color: var(--c-brand-light);
+}
+#lawyers h1 {
+  color: var(--c-dark);
+}
+
+.speaker-content {
+  background-color: var(--c-brand);
+  position: absolute;
+  bottom: -24px;
+  left: 50%;
+  width: calc(100% - 50px);
+  transform: translate(-50%);
+  padding: 24px;
+  transition: var(--transition);
+  opacity: 0;
+}
+
+.speaker img {
+  opacity: 0.8;
+}
+
+.speaker:hover .speaker-content {
+  opacity: 1;
+  bottom: 24px;
+}
+
+#widetext {
+  max-width: 1000px;
+}
