--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ img {
 }
 #hero h1 {
   color: #e5d9ba;
-  font-size: 120px;
+  font-size: 150px;
 }
 h1 {
   font-family: var(--font-title);
@@ -225,7 +225,7 @@ h2 {
   width: 550px;
   height: 550px;
 }
-#about .hr-top {
+.hr-top {
   margin: 60px auto auto auto;
   border-top: 3px solid var(--c-dark3);
   width: 33%;
@@ -234,9 +234,9 @@ h2 {
   color: var(--c-light2);
   text-align: center;
   margin-top: 30px;
-  font-size: 27px;
+  font-size: 35px;
 }
-#about .hr-bottom {
+.hr-bottom {
   margin: 30px auto auto auto;
   border-top: 3px solid var(--c-dark3);
   width: 50%;
