--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
   --c-light3: #fffcf3;
 
   --c-body: #4e443f;
-  --font-base: "Aptos Narrow", sans-serif;
+  --font-base: "Times", sans-serif;
   --font-title: "Perpetua", serif;
   --box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.08);
   --transition: all 0.5s ease;
@@ -204,7 +204,7 @@ h2 {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  font-size: 20px;
+  font-size: 24px;
 }
 /* ABOUT */
 
@@ -240,6 +240,9 @@ h2 {
   margin: 30px auto auto auto;
   border-top: 3px solid var(--c-dark3);
   width: 50%;
+}
+#about .about-dets {
+  font-size: 18px !important;
 }
 
 /* ICON BOX */
@@ -438,7 +441,23 @@ h2 {
 #speakers h5 {
   color: var(--c-dark3);
 }
+.name-box h4 {
+  color: var(--c-light2) !important;
+  font-size: 2rem !important;
+}
+.name-box h4.role {
+  color: var(--c-brand) !important;
+  font-size: 2rem !important;
+  margin-bottom: 10px !important;
+}
+.name-box h5 {
+  color: var(--c-light) !important;
+  font-size: 1.5rem !important;
+}
 
+.name-box {
+  margin-top: 30px;
+}
 .speaker-content {
   background-color: var(--c-brand);
   position: absolute;
