--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,7 @@ h2 {
 .prac-sub {
   display: none;
   background-color: #e5d9ba;
-  padding: 30px;
+  padding: 30px 30px 0px 30px;
 }
 .prac-sub h6 {
   color: #a66738;
