--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,10 +88,18 @@ img {
   transition: var(--transition);
 }
 
-.image-zoom:hover .image-zoom-wrapper img {
-  transform: scale(1.1);
+.mack.image-zoom:hover .image-zoom-wrapper img {
+  transform: scale(1.25) !important;
 }
-
+.sarah.image-zoom:hover .image-zoom-wrapper img {
+  transform: scale(1.1) !important;
+}
+.zoe.image-zoom:hover .image-zoom-wrapper img {
+  transform: scale(1.3) !important;
+}
+.mar.image-zoom:hover .image-zoom-wrapper img {
+  transform: scale(1.32) !important;
+}
 /* NAVBAR */
 
 .navbar {
@@ -227,11 +235,7 @@ h2 {
 
 #abt-img-cont {
   color: white;
-  background: linear-gradient(
-      rgba(var(--c-brand-rgb), 0.207),
-      rgba(var(--c-brand-rgb), 0.238)
-    ),
-    url(../images/About2.jpg);
+  background: url(../images/About2.jpg);
   /* background-position: center; */
   background-size: cover;
   width: 550px;
@@ -355,10 +359,6 @@ h2 {
     url(../images/appeals.jpeg);
   background-position: center;
   background-size: cover;
-}
-
-.offerings .iconbox {
-  /* background-color: rgb(228, 228, 228); */
 }
 
 .offerings::after {
@@ -689,6 +689,9 @@ footer img {
   margin: 220px 230px;
   text-align: center;
 }
+.title-cont.right {
+  margin-left: 1030px;
+}
 .title-cont h1 {
   color: var(--c-dark2) !important;
   font-size: 50px;
@@ -712,6 +715,16 @@ footer img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 20px;
+}
+.bottom-group p {
+  font-size: 15px !important;
+}
+.bottom-group a {
+  color: var(--c-dark);
+}
+.bottom-group a:hover {
+  color: var(--c-light);
 }
 .attorneyText {
   background-color: #e5d9ba;
