--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,12 +711,27 @@ footer img {
   font-size: 22px !important;
   text-indent: 100px;
 }
+.dets-row {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 75px;
+}
 .bottom-group {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 20px;
 }
+@media (max-width: 850px) {
+  .dets-row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .bottom-group {
+    margin-top: 25px;
+  }
+}
+
 .bottom-group p {
   font-size: 15px !important;
 }
