--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,7 @@ h2 {
 /* ABOUT */
 
 #about {
-  background-color: var(--c-light);
+  background-color: var(--c-light3);
   /* text-align: center; */
 }
 
