--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,7 @@ h2 {
   background-size: cover;
   width: 550px;
   height: 550px;
+  border: 15px solid #d0b192;
 }
 .hr-top {
   margin: 60px auto auto auto;
@@ -284,7 +285,7 @@ h2 {
   color: var(--c-dark);
 }
 .abouth5 {
-  color: var(--c-light2);
+  color: var(--c-brand);
 }
 
 /* OFFERINGS */
@@ -501,7 +502,7 @@ h2 {
 }
 .name-box h4.role {
   color: var(--c-brand) !important;
-  font-size: 2rem !important;
+  font-size: 1.5rem !important;
   margin-bottom: 10px !important;
 }
 .name-box h5 {
