--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -749,7 +749,7 @@ footer img {
     font-size: 18px !important;
     text-indent: 20px;
   }
-  .bio p span {
+  .bio p .first-line {
     font-size: 20px !important;
   }
 }
