--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -850,3 +850,11 @@ footer img {
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23c3976b' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+/* privacy */
+#privacy {
+  background-color: var(--c-light3);
+  padding: 50px;
+}
+#privacy p {
+  font-size: 18px;
+}
